cargo-features = ["per-package-target"]

[package]
name = "sel4-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-target = "armv7a-none-eabi"

[features]
default = ["zynq7000", "mcs"]
zynq7000 = ["dep:zynq7000", "sel4-sys/zynq7000"]
stm32mp1 = ["sel4-sys/stm32mp1"]
mcs = ["sel4-sys/mcs"]
dangerous-code-injection = ["sel4-sys/dangerous-code-injection"]

[dependencies]
sel4-sys = { path = "../sel4-sys", default-features = false }
zynq7000 = { path = "../platforms/zynq7000", optional = true }

[build-dependencies]
anyhow = "1.0.75"
indoc = "2.0.3"
quote = "1.0.32"
elf = "0.7.2"
fdt = { git = "https://github.com/moritz-meier/fdt.git", branch = "feature/stdinout-path-split-params" }
