[package]
name = "sel4-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "sel4"

[features]
default = ["zynq7000", "mcs"]
zynq7000 = []
stm32mp1 = []
mcs = []
dangerous-code-injection = []


[dependencies]

[build-dependencies]
anyhow = "1.0.75"
bindgen = "0.68.1"
duct = "0.13.6"
itertools = "0.11.0"
